name:                haskell-ipfs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-ipfs#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Cogan
maintainer:          danield9tqh@gmail.com
copyright:           2018 Daniel Cogan
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-ipfs
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       IPFSDependencyFile
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , system-filepath
                     , parsec
                     , text
